Updated release note for pull request #216